# kl-agents

./: .env.example  .gitignore  CONTEXT.md  Makefile  PLAN-REVIEW-LOG.md  PLAN.md  README.md  SPEC-EVAL.md  SPEC.md  config.yaml  pyproject.toml
.claude/: CLAUDE.md  corrections.md  decisions.md  reference_reddit_api_application.md  retrieval-registry.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
agents/scout/: config.py  logging_setup.py  main.py  models.py
agents/scout/classifier/: ica.py
agents/scout/fetchers/: base.py  reddit.py  youtube.py
agents/scout/storage/: posts.py  runs.py
deploy/: com.knifeledger.scout.plist
docs/: 2026-05-08 Scout Agent 1 Build + Reddit API Path.md  2026-05-11 Reddit API v2 Submitted.md  2026-06-06 Scout Symptom Extension + Validation Agent Spec.md  LESSON-INTEGRATION-agents-build.md  agent-contract.md  handoff_kl-agents-scout_2026-05-13-102800.md  reference_kl_engagement_feed.md  scout-scheduler.md
docs/adr/: 0001-scout-gates-on-signal-rubric-not-belief-match.md
docs/spikes/: 2026-06-03-opencli-echo-adapter-spike.md
memory/: HANDOFFS.md  INDEX.md  handoff_main_2026-06-18-000000.md  handoff_main_2026-06-21-000000.md  handoff_main_2026-06-23-000000.md
scripts/: run_scout.sh  smoke_classify.py  smoke_reddit_fetch.py  smoke_storage.py  smoke_youtube_fetch.py
shared/: config.py  logging_setup.py  runs.py
shared/db/: client.py
tests/scout/: test_classifier.py  test_orchestrator.py  test_reddit_fetcher.py  test_storage.py  test_youtube_fetcher.py
tests/shared/: test_contract_surface.py  test_import_invariant.py  test_runs.py
(+9 files in other folders)
